--- a/content/_templates/layout.html
+++ b/content/_templates/layout.html
@@ -12,6 +12,9 @@
         {% endblock %}
     </head>
     <body>
+        <header>
+            {% block header_link %}<a href="/" rel="home">intranation</a>{% endblock %}
+        </header>
         {% block body %}{% endblock %}
     </body>
 </html>
