--- a/content/_templates/layout.html
+++ b/content/_templates/layout.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         {% block htmlhead %}
         <title>{% block title %}Home{% endblock %} — intranation.com</title>
+        <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.4.1/build/cssreset/cssreset-min.css">
         <link rel="stylesheet" href="/static/css/base.css" type="text/css">
         <link href="/feed.atom" rel="alternate" title="Recent Blog Posts" type="application/atom+xml">
         <link rel="copyright" href="http://creativecommons.org/licenses/by-sa/2.0/uk/" type="text/html" title="Creative Commons Attribution-ShareAlike 2.0 England &amp; Wales Licence">
