Fix layout container temporarily

--- a/content/_templates/layout.html
+++ b/content/_templates/layout.html
@@ -16,7 +16,7 @@
         <header>
             {% block header_link %}<a href="/" rel="home">intranation</a>{% endblock %}
         </header>
-        {% block body %}{% endblock %}
+        <div id="content">{% block body %}{% endblock %}</div>
         <div id="footer">
             <div class="container">
 
