HTML style change

--- a/content/_templates/layout.html
+++ b/content/_templates/layout.html
@@ -16,7 +16,9 @@
         <header>
             {% block header_link %}<a href="/" rel="home">intranation</a>{% endblock %}
         </header>
-        <div id="content">{% block body %}{% endblock %}</div>
+        <div id="content">
+            {% block body %}{% endblock %}
+        </div>
         <div id="footer">
             <div class="container">
 
