--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@ home: true
 
 <ul class="posts">
     {% for post in site.posts %}
-        <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+        {% if post.type == 'link' %}
+            <li><a href="{{ post.external_link }}" rel="external">{{ post.title }}</a></li>
+        {% else %}
+            <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+        {% endif %}
     {% endfor %}
 </ul>
